fixed main overflow and navbar in mobile view

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+h2 {
+  flex-basis: 50%;
+}
+
 /* id selectors */
 #navbar {
   background-color: rgb(145, 246, 246);
@@ -34,4 +38,10 @@
 
 .card-header {
   background-color: rgb(145, 246, 246);
+}
+
+@media (min-width: 576px) {
+  h2 {
+    flex-wrap: nowrap!important;
+  }
 }
